[gd_scene load_steps=4 format=3 uid="uid://y158bruquctt"]

[ext_resource type="Texture2D" uid="uid://dvyjfthiqwb4a" path="res://map_phase/graveyard/assets/Fence, Gate, Signs/big sign.png" id="1_5f5iu"]
[ext_resource type="Script" uid="uid://b73kl7kwg0xfb" path="res://script/graveyard-new/sign.gd" id="1_tjkgw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u056m"]
radius = 9.0

[node name="Sign" type="Area2D" groups=["Player"]]
script = ExtResource("1_tjkgw")

[node name="BigSign" type="Sprite2D" parent="."]
position = Vector2(2.3841858e-07, -10)
scale = Vector2(0.17252068, 0.21565935)
texture = ExtResource("1_5f5iu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_u056m")

[node name="Label" type="Label" parent="."]
offset_left = -108.0
offset_top = -65.0
offset_right = 108.0
offset_bottom = -22.0
theme_override_font_sizes/font_size = 9
autowrap_mode = 2

[node name="PromptLabel" type="Label" parent="."]
offset_left = -13.0
offset_top = -23.0
offset_right = 12.0
theme_override_font_sizes/font_size = 9

[connection signal="body_entered" from="." to="." method="_on_Sign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sign_body_exited"]
